Updated navigation bar to always be across the top of the page in all screen sizes. - Fixed spacing of navlinks - Fixed underline size of navlinks - Refactoring to remove extra CSS

--- a/src/containers/Layout/index.css
+++ b/src/containers/Layout/index.css
@@ -1,23 +1,21 @@
 .text {
-  display: inline-flex;
   border-bottom: solid transparent;
+  margin-top: 1vh;
 }
  
 .active .text {
-   padding: 0em;
    border-bottom: solid #ffcebe;
    box-sizing: border-box;
 }
 
 #navLinks {
   display: flex;
-  flex-direction: column;
-  padding-left: 2vh;
-  padding-right: 3vh;
+  flex-direction: row;
+  justify-content: space-between;
   align-items: left;
   object-fit: contain;
-  width: 20vh;
-  height: 8em;
+  width: 100%;
+  height: 6vh;
   font-family: 'Inconsolata', monospace;
   font-size: 3vmin;
 }
@@ -43,6 +41,7 @@
   width: 100%;
   height: 100%;
   margin-right: 1vh;
+  margin-left: 1vh;
   display: flex;
   align-items: left;
 } 
@@ -69,28 +68,13 @@
   margin-top: 21vh;
 }
 
-@media only screen and (max-width: 767px) {
+/* @media only screen and (max-width: 767px) { */
   #layout {
-    width: 100%;
+    width: auto;
+    margin-right: 3vh;
     display: flex;
     flex-wrap: wrap;
   }
- 
-  #navLinks {
-   display: flex;
-   flex-direction: row;
-   justify-content: space-around;
-   align-content: left;
-   width: 100%;
-   height: 6vh;
-   font-family: 'Inconsolata', monospace;
-   font-size: 3vmin;
- }
-
- #navLinks .text {
-   padding: 1vh;
-   width: 100%;
- }
 
   #logo {
     visibility: hidden;
@@ -105,13 +89,13 @@
   .sectionHeader {
     margin-top: 1vh;
     margin-bottom: 1vh;
-    margin-left: 3vh;
+    /* margin-left: 1vh; */
     font-size: 2.5em;
     font-family: 'Karla', sans-serif;
   }
 
   .displayGrid {
-    margin-left: 3vh;
+    /* margin-left: 1vh; */
   }
 
-}
+/* } */
